--- a/src/app/components/create-casualty/create-casualty.component.scss
+++ b/src/app/components/create-casualty/create-casualty.component.scss
@@ -61,7 +61,7 @@ mat-sidenav-content {
   background-color: #fff;
 
   .screen {
-    padding-bottom: 160px;
+    padding-bottom: 100px;
     padding-top: 52px;
     box-sizing: border-box;
 
@@ -83,4 +83,12 @@ mat-sidenav-container {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
+}
+
+.injuries-container{
+  margin-bottom: 36px;
+}
+
+.edit-injuries-button{
+  color: rgba(0, 0, 0, 0.16);
 }
