--- a/src/styles.scss
+++ b/src/styles.scss
@@ -370,3 +370,11 @@ mat-spinner {
   0 1px 1px 0 rgba(0, 0, 0, .14),
   0 1px 3px 0 rgba(0, 0, 0, .12);
 }
+
+.mat-chip.mat-standard-chip.mat-chip-selected.mat-accent{
+  background-color: $primary;
+}
+
+.mat-icon-button.mat-accent{
+  color: $primary;
+}
