--- a/src/app/components/create-casualty/create-casualty.component.html
+++ b/src/app/components/create-casualty/create-casualty.component.html
@@ -61,7 +61,7 @@
             <div class="footer">
                 <div class="actions">
                     <button mat-raised-button color="accent"
-                        [disabled]="!casualtyForm.value.name" (click)="log()">
+                        [disabled]="!casualtyForm.value.name" (click)="save()">
                         {{ 'Creează' }}</button>
                 </div>
             </div>
