--- a/src/app/components/casualty-card-v2/casualty-card-v2.component.scss
+++ b/src/app/components/casualty-card-v2/casualty-card-v2.component.scss
@@ -4,6 +4,7 @@
 
 .casualty-card{
     position: relative;
+    width: 100%;
     border-radius: 6px;
     border: solid 1px #F3F3F3;
     box-shadow: 0 8px 12px -3px rgba(0, 0, 0, .08);
@@ -14,10 +15,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 16px 32px 0;
+    padding: 24px 32px 0;
 
     .card-subtitle{
-        margin-bottom: 16px;
+        margin-bottom: 20px;
     }
 }
 
@@ -27,7 +28,6 @@
 }
 
 .card-subtitle{
-    font-size: 12px;
     color: rgba(0, 0, 0, .42);
 }
 
@@ -37,6 +37,7 @@
 
 .details{
     color: rgba(0, 0, 0, .42);
+    margin: 20px 0 16px;
 }
 
 mat-chip-list{
