--- a/src/app/components/casualty-card-v2/casualty-card-v2.component.scss
+++ b/src/app/components/casualty-card-v2/casualty-card-v2.component.scss
@@ -1,5 +1,6 @@
 :host{
     display: flex;
+    // cursor: pointer;
 }
 
 .casualty-card{
@@ -7,18 +8,36 @@
     width: 100%;
     border-radius: 6px;
     border: solid 1px #F3F3F3;
-    box-shadow: 0 8px 12px -3px rgba(0, 0, 0, .08);
+    box-shadow: 0 8px 12px -3px rgba(0, 0, 0, .08),
+        0 1px 3px -3px rgba(0, 0, 0, .2);
     background-color: #fff;
+    transition: all 150ms ease;
+
+    &:active {
+        box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .1),
+        0 1px 3px -1px rgba(0, 0, 0, 0.1);
+    }
 }
 
 .card-header{
     display: flex;
-    flex-direction: column;
     align-items: center;
-    padding: 24px 32px 0;
+    padding: 16px 24px 0;
+    margin-bottom: 16px;
 
-    .card-subtitle{
-        margin-bottom: 20px;
+    .card-avatar{
+        mat-icon{
+            width: 44px;
+            height: 44px;
+            font-size: 44px;
+            color: rgba($color: #000, $alpha: 0.24);
+        }
+    }
+
+    .card-text{
+        margin: 0 14px;
+        display: flex;
+        flex-direction: column;
     }
 }
 
@@ -28,11 +47,12 @@
 }
 
 .card-subtitle{
+    // font-size: 12px;
     color: rgba(0, 0, 0, .42);
 }
 
 .card-content{
-    padding: 0 32px 8px;
+    padding: 0 24px 8px;
 }
 
 .details{
@@ -44,6 +64,9 @@ mat-chip-list{
     ::ng-deep{
         .mat-chip.mat-standard-chip{
             background-color: #F3F3F3;
+            &:after{
+                display: none;
+            }
         }
     }
 }
