--- a/src/styles.scss
+++ b/src/styles.scss
@@ -378,3 +378,9 @@ mat-spinner {
 .mat-icon-button.mat-accent{
   color: $primary;
 }
+
+.title{
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    margin: 0;
+}
