--- a/src/app/components/casualty-card-v2/casualty-card-v2.component.scss
+++ b/src/app/components/casualty-card-v2/casualty-card-v2.component.scss
@@ -1,6 +1,5 @@
 :host{
     display: flex;
-    // cursor: pointer;
 }
 
 .casualty-card{
@@ -22,33 +21,34 @@
 .card-header{
     display: flex;
     align-items: center;
-    padding: 16px 24px 0;
-    margin-bottom: 16px;
+    padding: 20px 24px 0;
+    margin-bottom: 20px;
 
     .card-avatar{
+        display: flex;
         mat-icon{
-            width: 44px;
-            height: 44px;
-            font-size: 44px;
-            color: rgba($color: #000, $alpha: 0.24);
+            width: 28px;
+            height: 28px;
+            font-size: 28px;
+            color: rgba($color: #000, $alpha: 0.64);
         }
     }
 
     .card-text{
-        margin: 0 14px;
+        margin-left: 8px;
         display: flex;
-        flex-direction: column;
     }
 }
 
 .card-title{
     font-size: 16px;
     font-weight: 600;
+    margin-right: 4px;
 }
 
 .card-subtitle{
-    // font-size: 12px;
-    color: rgba(0, 0, 0, .42);
+    color: rgba(0, 0, 0, .54);
+    display: none;
 }
 
 .card-content{
@@ -56,17 +56,6 @@
 }
 
 .details{
-    color: rgba(0, 0, 0, .42);
+    color: rgba(0, 0, 0, .54);
     margin: 20px 0 16px;
-}
-
-mat-chip-list{
-    ::ng-deep{
-        .mat-chip.mat-standard-chip{
-            background-color: #F3F3F3;
-            &:after{
-                display: none;
-            }
-        }
-    }
 }
