--- a/src/app/components/injury-form/injury-form.component.scss
+++ b/src/app/components/injury-form/injury-form.component.scss
@@ -72,3 +72,13 @@ mat-sidenav-content {
         }
     }
 }
+
+.overlay {
+  position: absolute;
+  z-index: 999;
+  display: flex;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.8);
+}
