--- a/src/app/components/casualties-v2/casualties-v2.component.html
+++ b/src/app/components/casualties-v2/casualties-v2.component.html
@@ -7,7 +7,7 @@
         <span class="top-bar-title">Victime</span>
 
         <div class="actions">
-            <button mat-icon-button (click)="openSearch()">
+            <button mat-icon-button>
                 <mat-icon>search</mat-icon>
             </button>
             <button mat-icon-button [routerLink]="'create'">
