--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,8 @@
     <button routerLink="/access-case" mat-raised-button color="accent">Accesează caz</button> -->
     <button routerLink="/injuries" mat-raised-button color="accent">Leziuni</button>
     <button routerLink="/casualties" mat-raised-button color="accent">Victime</button>
-    <span class="mat-small">#6</span>
+    <button routerLink="/create-case" mat-raised-button color="accent">Create Case</button>
+    <span class="mat-small">#7</span>
   </div>
 </div>
 
