--- a/src/app/components/injury-form/injury-form.component.html
+++ b/src/app/components/injury-form/injury-form.component.html
@@ -1,8 +1,6 @@
 <mat-sidenav-container class="container" [hasBackdrop]="false">
-    <mat-sidenav #sidenav mode="push" class="sidenav" [fixedInViewport]="true" opened="false" position="end"
-        [autoFocus]="false">
-        <app-maneuver-form [maneuver]="maneuver$ | async" (setManeuver)="setManeuver($event)"
-            (backEmitter)="close()"></app-maneuver-form>
+    <mat-sidenav #sidenav mode="push" class="sidenav" [fixedInViewport]="true" opened="false" position="end" [autoFocus]="false" (opened)="screenService.push(this.sidenav)">
+        <app-maneuver-form [maneuver]="maneuver$ | async" (setManeuver)="setManeuver($event)"></app-maneuver-form>
     </mat-sidenav>
 
     <mat-sidenav-content [formGroup]="form">
