--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,6 +7,7 @@
     <button routerLink="/access-case" mat-raised-button color="accent">Accesează caz</button> -->
     <button routerLink="/injuries" mat-raised-button color="accent">Leziuni</button>
     <button routerLink="/casualties" mat-raised-button color="accent">Victime</button>
+    <button routerLink="/cases" mat-raised-button color="accent">Cazuri</button>
     <button routerLink="/create-case" mat-raised-button color="accent">Create Case</button>
     <span class="mat-small">#7</span>
   </div>
