--- a/src/app/components/cases-v3/cases-v3.component.html
+++ b/src/app/components/cases-v3/cases-v3.component.html
@@ -25,7 +25,7 @@
             [formControl]="search" spellcheck="false">
 
         <div class="actions">
-            <button [disabled]="!search.value.length" mat-icon-button (click)="clearSearchInput();">
+            <button *ngIf="search.value.length" mat-icon-button (click)="clearSearchInput();">
                 <mat-icon>close</mat-icon>
             </button>
             <button mat-icon-button [routerLink]="'create'">
