--- a/src/app/components/cases-v3/cases-v3.component.scss
+++ b/src/app/components/cases-v3/cases-v3.component.scss
@@ -14,11 +14,10 @@
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  padding: 0 24px;
+  padding: 16px 24px;
 }
 
 .loader-container {
