--- a/src/styles.scss
+++ b/src/styles.scss
@@ -151,14 +151,31 @@ mat-chip{
 //   }
 // }
 
+// .top-bar-title{
+//   flex-grow: 1;
+//   font-family: 'Roboto', sans-serif;
+//   font-size: 20px;
+//   font-weight: 500;
+//   padding-top: 4px;
+//   margin: 0;
+//   margin-left: 16px;
+// }
+
 .top-bar-title{
   flex-grow: 1;
   font-family: 'Roboto', sans-serif;
-  font-size: 20px;
+  font-size: 1.25rem;
+  line-height: 2rem;
   font-weight: 500;
-  padding-top: 4px;
-  margin: 0;
-  margin-left: 16px;
+  letter-spacing: .0125em;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  color: #212121;
+  padding-left: 16px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .dialog-title{
@@ -199,23 +216,18 @@ mat-chip{
   padding: 0 8px;
   background-color: #fff;
 
+  .mat-icon-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .mat-button-wrapper{
+      display: flex;
+    }
+  }
+
   .actions {
     display: flex;
   }
-
-  // &.raised {
-  //   // box-shadow: 
-  //   //   0 1px 1px 0 rgba(0, 0, 0, .08),
-  //   //   0 2px 2px -2px rgba(0, 0, 0, .2);
-  //   // box-shadow: 0 2px 2px -2px rgba(0, 0, 0, .2);
-
-  //   // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.08),
-  //   // 0 2px 2px -2px rgba(0, 0, 0, 0.12);
-
-  //   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.08),
-  //   0 1px 3px -1px rgba(0, 0, 0, 0.2);
-  //   background-color: #fff;
-  // }
 
   .search {
     position: absolute;
@@ -244,7 +256,6 @@ mat-chip{
     border: 0;
     height: 32px;
     font-weight: 400;
-    padding-left: 0;
     padding-right: 0;
     width: 100%;
   }
@@ -381,12 +392,6 @@ mat-spinner {
   color: $primary;
 }
 
-.title{
-    font-family: 'Roboto', sans-serif;
-    font-size: 18px;
-    margin: 0;
-}
-
 .overlay {
   position: absolute;
   z-index: 999;
@@ -473,4 +478,48 @@ mat-selection-list{
       display: none;
     }
   }
+}
+
+.label{
+  display: block;
+  font-size: 13px;
+  line-height: 1.5rem;
+  color: #121212;
+  letter-spacing: 0.4px;
+  font-family: 'Roboto', sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
+.title{
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  font-weight: 500;
+  letter-spacing: .0125em;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  color: black;
+}
+
+.secondary-text{
+  font-family: 'Roboto', sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: .875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  letter-spacing: .0178571429em;
+  color: #616161;
+}
+
+.text{
+  font-family: 'Roboto', sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-size: .875rem;
+  line-height: 1.25rem;
+  font-weight: 400;
+  letter-spacing: .0178571429em;
+  color: #616161;
 }
