--- a/src/app/components/case-card-v2/case-card-v2.component.scss
+++ b/src/app/components/case-card-v2/case-card-v2.component.scss
@@ -5,17 +5,17 @@
 }
 
 .custom-card{
-    position: relative;
-    width: 100%;
-    border-radius: 6px;
-    border: solid 1px #F3F3F3;
-    box-shadow: $elevate-4;
-    background-color: #fff;
-    transition: $transition;
+    // position: relative;
+    // width: 100%;
+    // border-radius: 6px;
+    // border: solid 1px #F3F3F3;
+    // box-shadow: $elevate-4;
+    // background-color: #fff;
+    // transition: $transition;
 
-    &:active {
-        box-shadow: $elevate-2;
-    }
+    // &:active {
+    //     box-shadow: $elevate-2;
+    // }
 
     &.new{
         &:before{
