--- a/src/styles.scss
+++ b/src/styles.scss
@@ -268,7 +268,8 @@ mat-chip{
     box-sizing: border-box;
     border: solid 1px rgba(0, 0, 0, 0.14);
     border-radius: 6px;
-    transition: all .15s ease-in-out;
+    @include transition(box-shadow);
+    transition: transform .25s ease;
 
     &:after {
       display: none;
@@ -278,9 +279,10 @@ mat-chip{
   .mat-chip-selected {
     background-color: $primary !important;
     border-color: $primary;
-      box-shadow: 0 3px 5px -1px hsla(357, 86%, 52%, .2),
+    box-shadow: 0 3px 5px -1px hsla(357, 86%, 52%, .2),
       0 6px 10px 0 hsla(357, 86%, 52%, .14),
-      0 1px 18px 0 hsla(357, 86%, 52%, .12);
+      0 1px 18px 0 hsla(357, 86%, 52%, .12) !important;
+    transform: translateY(-3px);
   }
 }
 
@@ -522,4 +524,26 @@ mat-selection-list{
   font-weight: 400;
   letter-spacing: .0178571429em;
   color: #616161;
+}
+
+.custom-card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 8px;
+  background-color: #fff;
+  border: solid 1px $white-grey;
+  box-shadow: $elevate-4;
+  transition: $transition;
+
+  &:active {
+    transform: translateY(8px);
+    box-shadow: none;
+  }
+}
+
+.secondary-button {
+  color: $light-grey;
 }
