--- a/src/app/components/casualty-norm/casualty-norm.component.html
+++ b/src/app/components/casualty-norm/casualty-norm.component.html
@@ -14,27 +14,12 @@
     </div>
 
     <div class="content">
-        <mat-accordion multi="true">
-            <mat-expansion-panel *ngFor="let injury of (injuries$ | async); let injuryIndex = index" [expanded]="true">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        {{ injury.name }}
-                    </mat-panel-title>
-                    <mat-panel-description class="secondary-text" [class.error]="getCount(injuryIndex) !== injury.maneuvers.length">
-                        {{ getCount(injuryIndex) }}/{{ injury.maneuvers.length }}
-                    </mat-panel-description>
-                </mat-expansion-panel-header>
-        
-                <app-maneuver-norm-list-item *ngFor="let maneuver of injury.maneuvers; let maneuverIndex = index"
-                    [maneuver]="maneuver"
-                    (scoreChange)="setSelectedScore(injuryIndex, maneuverIndex, $event)"></app-maneuver-norm-list-item>
-            </mat-expansion-panel>
-        </mat-accordion>
+        <app-norm [injuries]="injuries$ | async" (scoreChange)="setSelectedScore($event.injuryIndex, $event.maneuverIndex, $event.selectedScore)"></app-norm>
     </div>
 
     <div class="footer">
         <div class="actions">
-            <button mat-raised-button color="accent" (click)="openNormReview()">
+            <button mat-raised-button color="accent" [disabled]="!canFinish()" (click)="openNormReview()">
                 Finalizează
             </button>
         </div>
