--- a/src/app/components/dialog-norm-review/dialog-norm-review.component.html
+++ b/src/app/components/dialog-norm-review/dialog-norm-review.component.html
@@ -1,21 +1,11 @@
 <div #screen class="screen">
     <div class="content">
-        <!-- <mat-accordion multi="true">
-            <mat-expansion-panel *ngFor="let injury of injuries$ | async" [expanded]="true">
-                <mat-expansion-panel-header>
-                    <mat-panel-title>
-                        {{ injury.name }}
-                    </mat-panel-title>
-                    <mat-panel-description class="secondary-text">
-                        {{ count[injury.id].value }}/{{ count[injury.id].maximum }}
-                    </mat-panel-description>
-                </mat-expansion-panel-header>
-
-                <app-maneuver-norm-list-item *ngFor="let maneuver of injury.maneuvers" [maneuver]="maneuver"
-                    (selected)="countSelection($event, injury.id)" (scoreChange)="changeScore($event)">
-                </app-maneuver-norm-list-item>
-            </mat-expansion-panel>
-        </mat-accordion> -->
+        <div class="title">Punctaj</div>
+        <div class="score">
+            {{ getScore() }}<span class="score total-score">/{{totalScore}}</span>
+        </div>
+        <app-norm [injuries]="filteredInjuries$ | async" [showCounting]="false" (scoreChange)="setSelectedScore($event.injuryIndex, $event.maneuverIndex, $event.selectedScore)"></app-norm>
+        <button mat-button color="accent" (click)="toggleShowAll()">Arată tot</button>
     </div>
 
     <div class="footer">
