--- a/src/app/components/dialog-norm-review/dialog-norm-review.component.scss
+++ b/src/app/components/dialog-norm-review/dialog-norm-review.component.scss
@@ -1,11 +1,36 @@
+@import "../../../assets/scss/variables";
+
 .content {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     width: 100%;
+    min-height: 100%;
     box-sizing: border-box;
     padding: 16px 0 24px;
 }
 
 .screen {
+    padding-top: 24px;
     padding-bottom: 96px;
+}
+
+.title{
+    text-align: center;
+}
+
+.score{
+    font-family: $primary-font;
+    font-size: 48px;
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    margin-bottom: 16px;
+
+    &.total-score{
+        font-size: 16px;
+        color: $light-grey;
+        font-weight: 400;
+    }
 }
